fix: fix next-course scrollbar

--- a/app/widgets/course/course.scss
+++ b/app/widgets/course/course.scss
@@ -12,7 +12,7 @@
 }
 
 .next-course-name {
-  margin: 0 auto;
+  margin: 0 6px;
 
   font-weight: bold;
   font-size: 18px;
